IF (NOT VTK_FOUND)
	MESSAGE(FATAL_ERROR "Error: VTK was not found but is needed for the GUI. Aborting...")
ENDIF (NOT VTK_FOUND)
INCLUDE( ${VTK_USE_FILE} )

SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO  "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /ZI /Od /Ob0")

# Add subprojects
ADD_SUBDIRECTORY( Base )
ADD_SUBDIRECTORY( DataView/StratView )
ADD_SUBDIRECTORY( DataView )
ADD_SUBDIRECTORY( DataView/DiagramView )
ADD_SUBDIRECTORY( VtkVis )
ADD_SUBDIRECTORY( VtkAct )
IF (OGS_USE_OPENSG)
	ADD_SUBDIRECTORY( OpenSG )
ENDIF (OGS_USE_OPENSG)
IF(VRPN_FOUND AND OGS_USE_VRPN)
	ADD_SUBDIRECTORY( Vrpn )
ENDIF()

IF(OGS_AUTO_UPDATE)
	IF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Base/fervor)
		#IF(NOT ${TAR_TOOL_PATH})
		#	MESSAGE(FATAL_ERROR "Tar was not found but is needed for OGS_AUTO_UPDATE")
		#ENDIF()
		FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Base/fervor)
		FILE(DOWNLOAD https://github.com/bilke/fervor/tarball/cmake-build
			${CMAKE_CURRENT_SOURCE_DIR}/fervor.tar.gz TIMEOUT 60)
		# Untar, --strip 1 ignores first directory in tarball
		EXECUTE_PROCESS(
			COMMAND tar -xzf ${CMAKE_CURRENT_SOURCE_DIR}/fervor.tar.gz --strip 1
			WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Base/fervor)
		FILE(REMOVE ${CMAKE_CURRENT_SOURCE_DIR}/fervor.tar.gz)
	ENDIF()
	ADD_DEFINITIONS(-DOGS_AUTO_UPDATE)
	SET(FERVOR_APP_NAME "OpenGeoSys - Data Explorer")
	SET(FERVOR_APP_VERSION "${OGS_VERSION}")
	ADD_SUBDIRECTORY(Base/fervor)
	INCLUDE_DIRECTORIES(Base/fervor)
	CONFIGURE_FILE(Appcast.xml.in Appcast.xml)
ENDIF()

INCLUDE( DataExplorer.cmake )
